--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <section>
       <div id="about">
         <div class="about-row">
-          <div class="about-col1"><img src="img/79DCFB90-A46A-4B7C-AA17-E0777C5D85E3.png" alt="My Image" /></div>
+      <div class="about-col1" style="width: 456px; height: 570px;">
+        <img src="img/79DCFB90-A46A-4B7C-AA17-E0777C5D85E3.png" alt="My Image" />
+      </div>
+
           <div class="about-col2">
             <h2 class="about-title">About Me</h2>
             <p>
