--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
           <div class="about-col2">
             <h2 class="about-title">About Me</h2>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
-              libero repudiandae expedita nesciunt exercitationem corrupti
-              dolores praesentium distinctio, tempora fuga labore culpa qui
-              asperiores molestias quisquam! Laudantium eius facilis modi.
+              Hello, My name is Spencer Hedges. I am a ten-year-old programmer (almost) in the fifth grade. I enjoy programming, gaming, and listening to music.
             </p>
             <div class="tab-titles">
               <button class="tab-link skills active-link">Skills</button>
